# google_workspace_mcp

./: .env.railway.example  .gitignore  Dockerfile  README.md  SECURITY_AUDIT.md  main.py  pyproject.toml  railway.json
auth/: google_auth.py  oauth21_session_store.py  permissions.py  scopes.py  service_decorator.py
core/: attachment_storage.py  server.py  tool_tiers.yaml  utils.py
gchat/: chat_tools.py
gcontacts/: contacts_tools.py
gdocs/: docs_helpers.py  docs_tools.py  operation_schemas.py
gdocs/managers/: batch_operation_manager.py  validation_manager.py
gdrive/: drive_tools.py
gmail/: gmail_tools.py
gsheets/: sheets_tools.py
tests/: test_permissions.py  test_scopes.py
tests/auth/: test_google_auth_callback_refresh_token.py  test_security_hardenings.py
tests/core/: test_pdf_image_utils.py  test_storage.py
tests/gcalendar/: test_manage_event.py
tests/gchat/: test_chat_tools.py
tests/gcontacts/: test_contacts_integration.py  test_contacts_tools_v2.py
tests/gcontacts/golden/: contacts_tool_schemas.json
tests/gdocs/: test_table_cell_style.py
tests/gdrive/: test_drive_file_content.py
tests/gsheets/: test_resize_sheet_dimensions.py
